chore: ⬆️ upgrade Java version to 25 and update dependencies